#1358 Fix unreadable marking

--- a/themes/Fifteen/style.css
+++ b/themes/Fifteen/style.css
@@ -1538,6 +1538,11 @@ a.btn.btn-primary, a.btn.btn-danger, a.btn.btn-warning, .profile-nav a.list-grou
 	color: #fff;
 }
 
+.night .list-group-forum .list-group-item.new-item {
+	background-color: #3b3b3b;
+	border-color: #333;
+}
+
 .night #search .panel-body, .night .user-entry {
 	background-color: #555;
 }
@@ -1563,8 +1568,13 @@ a.btn.btn-primary, a.btn.btn-danger, a.btn.btn-warning, .profile-nav a.list-grou
 	background-color: #404040;
 }
 
+.night .list-group-topic .list-group-item.new-item {
+	background-color: #3b3b3b;
+	border-color: #333;
+}
+
 .night .list-group-topic .list-group-item:hover {
-	background-color: #3b3b3b !important;
+	background-color: #3b3b3b;
 }
 
 .night .panel-editor .btn-default {
